crates/vaab-vm/tests/snapshots/errors__dividing_a_decimal_by_zero.snap
---
source: crates/vaab-vm/tests/errors.rs
expression: "stops(\"let none = 0.0\\nprint(10.0 / none)\\n\")"
---
[divide-by-zero] Error: this divides by zero
   ╭─[ example.vaab:2:7 ]
   │
 2 │ print(10.0 / none)
   │       ─────┬─────  
   │            ╰─────── the right-hand side is 0
   │ 
   │ Help: check the divisor first, as in `if count != 0 { ... }`
───╯
