crates/vaab-vm/tests/snapshots/errors__dividing_a_whole_number_by_zero.snap
---
source: crates/vaab-vm/tests/errors.rs
expression: rendered
---
[divide-by-zero] Error: this divides by zero
   ╭─[ example.vaab:2:7 ]
   │
 2 │ print(10 / none)
   │       ────┬────  
   │           ╰────── the right-hand side is 0
   │ 
   │ Help: check the divisor first, as in `if count != 0 { ... }`
───╯
