crates/vaab-vm/tests/snapshots/errors__making_a_channel_says_which_phase_brings_it.snap
---
source: crates/vaab-vm/tests/errors.rs
expression: "stops(\"let jobs = Channel.new(of: Int, size: 1)\\nsend 1 to jobs\\n\")"
---
[not-yet] Error: channels arrive in phase 4
   ╭─[ example.vaab:1:12 ]
   │
 1 │ let jobs = Channel.new(of: Int, size: 1)
   │            ──────────────┬──────────────  
   │                          ╰──────────────── this is not built yet
   │ 
   │ Help: phase 4 builds the scheduler that tasks and channels run on
   │ 
   │ Note: it type-checks today, so the program is ready for the phase that runs it
───╯
