crates/vaab-vm/tests/snapshots/errors__reaching_before_the_start_of_a_list.snap
---
source: crates/vaab-vm/tests/errors.rs
expression: "stops(\"let names = [\\\"Ada\\\"]\\nlet back = 0 - 1\\nprint(names[back])\\n\")"
---
[index-out-of-range] Error: this list has no item at -1
   ╭─[ example.vaab:3:7 ]
   │
 3 │ print(names[back])
   │       ─────┬─────  
   │            ╰─────── the list holds 1 item
   │ 
   │ Help: positions count forwards from 0, so one below 0 never reaches an item
───╯
