crates/vaab-vm/tests/snapshots/errors__select_with_an_otherwise_arm_runs_without_blocking.snap
---
source: crates/vaab-vm/tests/errors.rs
expression: "support::printed(source)"
---
nothing ready
