crates/vaab-vm/tests/snapshots/errors__sending_to_a_closed_channel_stops.snap
---
source: crates/vaab-vm/tests/errors.rs
expression: stops(source)
---
[confused] Error: the Vaab machine found a state it cannot explain
   ╭─[ example.vaab:3:1 ]
   │
 3 │ send 1 to jobs
   │ ───────┬──────  
   │        ╰──────── this is where it stopped
   │ 
   │ Help: this is a bug in Vaab itself, not in the program
   │ 
   │ Note: a send reached a channel that is closed
───╯
